--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,14 @@
     border-radius:  50%;
     width: 50px;
     height: 50px;
+    cursor: pointer;
+    margin:  10px;
+}
+
+body{
+    background-color: rgba(128, 128, 128, 0.39);
+}
+
+h1 {
+    color: white;
 }
