--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,16 @@
     width: 50px;
     height: 50px;
     cursor: pointer;
-    margin:  10px;
+    margin:  2px;
 }
 
-body{
-    background-color: rgba(128,128,128,0.13);
+spelbordtable {
+    width: 100%;
+    margin: 0px auto;
+}
+
+body {
+    margin: 10px;
 }
 
 .optie {
@@ -15,6 +20,8 @@ body{
     border: 0px;
     outline: none;
     padding: 0px;
+    margin-top: 10px;
+    width: 100%;
 }
 
 .kleuroptie{
@@ -26,6 +33,7 @@ body{
     border-radius: 10px;
     margin-bottom: 5px;
     border: 1px solid black;
+    width: 100%;
 }
 
 .kleuroptie:active {
