--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.51);
 }
 
-spelbordtable {
+.spelbordtable {
     width: 100%;
     margin: 0px auto;
 }
