--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,20 @@
 }
 
 .spelbordtable {
-    width: 100%;
     margin: 0px auto;
+}
+
+.spelbord {
+    margin: 12px auto;
 }
 
 body {
     background-color: rgba(0, 0, 0, 0.07);
     margin: 10px;
+}
+
+.logo {
+    color: rgb(240, 240, 240);
 }
 
 .optie {
@@ -22,22 +29,17 @@ body {
     outline: none;
     padding: 0px;
     margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
+    box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.51);
 }
 
-.kleuroptie{
+.kleuroptie, .kleuroptie:link, .kleuroptie:visited, .kleuroptie:hover, .kleuroptie:active, .kleuroptie:after {
     outline: none;
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
-    border-radius: 10px;
-    margin-bottom: 5px;
-    border: 1px solid black;
     width: 100%;
-}
-
-.kleuroptie:active {
-    border-color: white;
 }
 
 .label-block {
