--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,4 @@
-.druppel {
-    border-radius:  50%;
-    cursor: pointer;
-    margin:  2px;
-    box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.51);
-}
 
-.spelbordtable {
-    margin: 0px auto;
-}
-
-.spelbord {
-    margin: 12px auto;
-}
 
 body {
     background-color: rgba(0, 0, 0, 0.07);
@@ -23,24 +10,46 @@ body {
 }
 
 .optie {
-    background-color: rgba(0,0,0,0);
-    overflow-y: auto;
-    border: 0px;
-    outline: none;
-    padding: 0px;
     margin-top: 10px;
     margin-bottom: 10px;
     width: 100%;
     box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.51);
 }
 
-.kleuroptie, .kleuroptie:link, .kleuroptie:visited, .kleuroptie:hover, .kleuroptie:active, .kleuroptie:after {
+.kleuroptie {
     outline: none;
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
     width: 100%;
+    cursor: pointer;
 }
+
+.geselecteerd {
+    box-shadow: inset 1px 1px 30px rgba(0, 0, 0, 0.7);
+    border-left: 10px solid rgba(255, 255, 255, 0.2);
+    -webkit-transition: box-shadow 0.5s;
+    -webkit-transition: border-left 0.5s;
+}
+
+/*
+Stijl voor het spelbord
+ */
+
+.druppel {
+    border-radius:  50%;
+    cursor: pointer;
+    margin:  2px;
+    box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.51);
+}
+
+.spelbordtable {
+    margin: 0px auto;
+}
+
+/**
+Stijl voor het scoreblock
+ */
 
 .label-block {
     font-weight: normal;
